F99 | Updated spot page nav to use new style guide styles, still broken on desktop fixed view though

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -122,8 +122,8 @@ $mixed: #F2994A;
 $negative: #CCCCCC;
 
 // We use these as default colors throughout
-$primary-color: #2D9CDB;
-$secondary-color: #e7e7e7;
+$primary-color: #0D659D;
+$secondary-color: #2278F1;
 $alert-color: #EB5757;
 $fail-color: #EB5757;
 $success-color: #27AE60;
